# tergo-nft

./: Cargo.toml  README.md  build.sh  deploy.sh  dfx.json
src/tergo_backend/: Cargo.toml
src/tergo_nft/: Cargo.toml  tergo_nft.did
src/tergo_nft/src/: archive.rs  cycles.rs  guards.rs  init.rs  lib.rs  memory.rs  state.rs  utils.rs
src/tergo_nft/src/methods/: icrc37_query_method.rs  icrc37_update_method.rs  icrc3_query_method.rs  mod.rs  query_method.rs  update_method.rs
src/tergo_nft/src/types/: icrc37_types.rs  icrc3_types.rs  icrc7_types.rs  mod.rs
src/tergo_nft_archive/: Cargo.toml  tergo_nft_archive.did
src/tergo_nft_archive/src/: guards.rs  init.rs  lib.rs  query_method.rs  state.rs  types.rs  update_method.rs
