[package]
name = "tergo_nft_archive"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.8"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-stable-structures = "0.6.6"
icrc-ledger-types = "0.1.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
serde_bytes = "0.11"
num-traits = "0.2.19"

[lib]
crate-type = ["cdylib"]